--- a/style.css
+++ b/style.css
@@ -68,3 +68,15 @@ input[type="password"] {
 img{
     height: 100px;
 }
+
+.logos {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            border: solid 1px #ccc;
+            width: 180px;
+            height: 200px;
+            border-radius: 20px;
+            padding: 10px;
+        }
